--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JyJ impresiones 3D</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -72,7 +73,7 @@
 
                     </div>
                     <div id="carrito" class="carrito">
-                        <h2>Lista de consulta</h2>
+                        <h2>Lista de consulta de stock</h2>
                         <ul id="carrito-lista" class="carrito-lista">
                             <!-- Aquí van los productos seleccionados -->
                         </ul>
@@ -89,6 +90,15 @@
                 <a href="https://www.tiktok.com/@jyj3d"><img src="img/tiktok.png" width="100"></a>
             </section>
     </main>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "JyJ impresiones 3D",
+          "url": "https://www.grupomisiones.com.ar/jyj3d",
+          "logo": "https://grupomisiones.com.ar/jyj3d/img/logo.jpg"
+        }
+    </script>
     <script src="script.js"></script>
     <script type="text/javascript">
         document.addEventListener('contextmenu', event => event.preventDefault());
