--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="https://www.google.com/maps/place/JyJ+impresiones+3D/@-27.3689997,-55.9532883,19z/data=!3m1!4b1!4m6!3m5!1s0x9457bd50cfe28bf1:0xd53ef61fdd7ecd4e!8m2!3d-27.3689997!4d-55.9532883!16s%2Fg%2F11w3rhkg43?entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D">Dirección</a></li>
+                <li><a href="https://www.google.com.ar/maps/place/JyJ+hidropon%C3%ADa/@-27.3689717,-55.9536105,20z/data=!4m14!1m7!3m6!1s0x9457bdc16e5d916d:0xe70f4cdecb556208!2sJyJ+hidropon%C3%ADa!8m2!3d-27.3689961!4d-55.9532846!16s%2Fg%2F11y5m1sxnb!3m5!1s0x9457bdc16e5d916d:0xe70f4cdecb556208!8m2!3d-27.3689961!4d-55.9532846!16s%2Fg%2F11y5m1sxnb?hl=es&entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D">Dirección</a></li>
             </ul>
         </nav>
     </header>
