--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
                 <li><a href="https://www.google.com.ar/maps/place/JyJ+hidropon%C3%ADa/@-27.3689717,-55.9536105,20z/data=!4m14!1m7!3m6!1s0x9457bdc16e5d916d:0xe70f4cdecb556208!2sJyJ+hidropon%C3%ADa!8m2!3d-27.3689961!4d-55.9532846!16s%2Fg%2F11y5m1sxnb!3m5!1s0x9457bdc16e5d916d:0xe70f4cdecb556208!8m2!3d-27.3689961!4d-55.9532846!16s%2Fg%2F11y5m1sxnb?hl=es&entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D">Dirección</a></li>
+                <li><a href="https://m.uber.com/ul/?action=setPickup&pickup[latitude]=-27.3689961&pickup[longitude]=-55.9532846&pickup[nickname]=JyJ%20Impresiones%203D&dropoff=my_location" target="_blank">
+                    Solicitar envío con Uber
+                </a></li>
             </ul>
         </nav>
     </header>
@@ -39,7 +42,6 @@
                 <p>En <strong>JyJ Impresiones 3D</strong>, diseñamos y creamos productos únicos con tecnología de impresión 3D. Desde figuras decorativas, mates personalizados y lámparas innovadoras, hasta portacelulares y adornos exclusivos, ofrecemos creatividad y calidad en cada detalle.</p>
                 <p><strong>Ubicación:</strong> Estamos en Posadas, Misiones, comprometidos con ofrecer soluciones personalizadas para cada cliente.</p>
                 <p><strong>Facilidades de Pago:</strong> Aceptamos pagos en cuotas a través de link de pago, asegurando comodidad y flexibilidad.</p>
-                <p><strong>Envíos:</strong> Realizamos envíos gratis en Posadas para compras superiores a <strong>$40.000</strong>. ¡Aprovechá esta ventaja y llevá tus ideas a la realidad!</p>
             </section>            
             <section>
                 <h2>Productos</h2>
