--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <a href="https://www.instagram.com/jyjimpresion3d/"><img src="img/instagram.jpg" width="100"></a>
                 <a href="https://www.tiktok.com/@jyj3d"><img src="img/tiktok.png" width="100"></a>
             </section>
+            <a class="whatsapp-button" href="https://wa.me/3765188420?text=¡Hola! Quiero obtener más información sobre la tienda 3D." target="_blank">WhatsApp</a>
     </main>
     <script src="script.js"></script>
     <script type="text/javascript">
