--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <ul>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="https://m.uber.com/ul/?action=setPickup&pickup[latitude]=-27.3689961&pickup[longitude]=-55.9532846&pickup[nickname]=JyJ%20Impresiones%203D&dropoff=my_location" target="_blank">Uber envíos</a></li>
             </ul>
         </nav>
     </header>
@@ -39,6 +38,7 @@
                 <p>En <strong>JyJ Impresiones 3D</strong>, diseñamos y creamos productos únicos con tecnología de impresión 3D. Desde figuras decorativas, mates personalizados y lámparas innovadoras, hasta portacelulares y adornos exclusivos, ofrecemos creatividad y calidad en cada detalle.</p>
                 <p><strong>Ubicación:</strong> Estamos en Posadas, Misiones, comprometidos con ofrecer soluciones personalizadas para cada cliente.</p>
                 <p><strong>Facilidades de Pago:</strong> Aceptamos pagos en cuotas a través de link de pago, asegurando comodidad y flexibilidad.</p>
+                <p><strong>Envío:</strong> Solicita tu envío gratis, pagando por mercadopago o en efectivo al recibir los productos.</p>
             </section>            
             <section>
                 <h2>Productos</h2>
