--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>En <strong>JyJ Impresiones 3D</strong>, diseñamos y creamos productos únicos con tecnología de impresión 3D. Desde figuras decorativas, mates personalizados y lámparas innovadoras, hasta portacelulares y adornos exclusivos, ofrecemos creatividad y calidad en cada detalle.</p>
                 <p><strong>Ubicación:</strong> Estamos en Posadas, Misiones, comprometidos con ofrecer soluciones personalizadas para cada cliente.</p>
                 <p><strong>Facilidades de Pago:</strong> Aceptamos pagos en cuotas a través de link de pago, asegurando comodidad y flexibilidad.</p>
-                <p><strong>Envío:</strong> Solicita tu envío gratis, pagando por mercadopago o en efectivo al recibir los productos.</p>
+                <p><strong>Entrega de los productos:</strong> Solicita tu envío a través de Uber o puedes retirarlo personalmente.</p>
             </section>            
             <section>
                 <h2>Productos</h2>
