--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul>
                 <li><a href="#productos">Productos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+                <li><a href="https://maps.app.goo.gl/VWbwTFb1Jq9ruVM8A">Dirección</a></li>
             </ul>
         </nav>
     </header>
